<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="a98099815.mad.exercise6.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/subject_name_main_activity_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:hint="@string/subject_name1" />

        <EditText
            android:id="@+id/main_activity_subject_number_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/subject_name_main_activity_edit_text"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:hint="@string/subject_number" />


        <RadioGroup
            android:id="@+id/main_activity_subject_type_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_activity_subject_number_edit_text"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/main_activity_core_radio_button"
                android:layout_width="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/subject_core" />

            <RadioButton
                android:id="@+id/main_activity_elective_radio_button"
                android:layout_width="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:text="@string/subject_elective" />
        </RadioGroup>


        <TextView
            android:id="@+id/main_activity_start_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_activity_subject_type_radio_group"
            android:layout_marginBottom="10dp"
            android:text="@string/subject_start_date" />

        <DatePicker
            android:id="@+id/main_activity_subject_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_activity_start_date_text_view"
            android:layout_gravity="center" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/main_activity_subject_date_picker"
            android:gravity="bottom">

            <Button
                android:id="@+id/main_activity_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:onClick="addSubject"
                android:text="@string/subject_add" />

            <Button
                android:id="@+id/main_activity_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:onClick="listSubjects"
                android:text="@string/subject_list" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>